<resources>
    <string name="app_name">TMClone</string>
    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="text_tickets">Tickets</string>
    <string name="placeholder_event_name">Event name</string>
    <string name="title_ticketMaster">TicketMaster</string>
    <string name="text_signin">Sign in</string>
    <string name="placeholder_name">User Name</string>
    <string name="textview">TextView</string>
    <string name="delete_account">delete account</string>
    <string name="change_password">change password</string>
    <string name="string_music">Music</string>
    <string name="string_sports">Sports</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="title_app">TicketMaster Clone</string>
    <string name="string_theater">Theater</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="string_nobookmarks">No bookmarks to show.</string>
</resources>